@@ -15,8 +15,17 @@ Full documentation for the gem is available at http://waz-storage.heroku.com
 Well, this is a sum up of the whole experience of writing those gems and getting them to work together to simplify 
 end user experience. Although there're some breaking changes, it's pretty backward compatible with existing gems.
 
+=== What's new on the 0.5.8 version?
+- Fixed an issue on the Queues Documentation (thanks @ezequielm)
+- Added _naming validation for Containers_ according to http://msdn.microsoft.com/en-us/library/dd135715.aspx (thanks @panosjee)
+- Added _naming validation for Queues_ according to http://msdn.microsoft.com/en-us/library/dd179349.aspx (thanks @panosjee)
+- Added _support for Blob snapshots_ 
+- Added support for rest-client 1.3.0. (thanks @jpgd)
+# WIP
+- Blobs API has been migrated to the 2009-09-19 Version of the Storage API
+
 === What's new on the 0.5.7 version?
-- Fixes a critical bug on URL management that some time prevents messages from being deleted, caused by a missing encoding on the URL 	parameters.
+- Fixes a critical bug on URL management that some time prevents messages from being deleted, caused by a missing encoding on the URL	parameters.
 
 === What's new on the 0.5.6 version?
 - Added new <b>shared key authentication support for 2009-09-19 Version of the Storage API</b>
