@@ -4,6 +4,7 @@
 - Added _naming validation for Containers_ according to http://msdn.microsoft.com/en-us/library/dd135715.aspx (thanks @panosjee)
 - Added _naming validation for Queues_ according to http://msdn.microsoft.com/en-us/library/dd179349.aspx (thanks @panosjee)
 - Added _support for Blob snapshots_ 
+- Added support for rest-client 1.3.0.
 # WIP
 - Blobs API has been migrated to the 2009-09-19 Version of the Storage API
 
